@startuml

title CONTROL Class Diagram\n

  namespace com.unisa.cinehub {
    namespace control {
      class com.unisa.cinehub.control.CatalogoControl {
          + addRecensione(Recensione recensione): void
          + requestRecensioneById(Long id): Recensione
          + addMiPiace(boolean b, Recensione recensione): void
          + findMiPiaceById(Recensione recensione): MiPiace
          + getNumeroMiPiaceOfRecensione(Recensione recensione): Integer
          + getNumeroNonMiPiaceOfRecensione(Recensione recensione): Integer
          + rispondiARecensione(Recensione risposta): void
          + findAllFilm(): List<Film>
          + findAllSerieTv(): List<SerieTv>
          + findMostRecentMedia(Integer howMany): List<Media>
          + puntateByStagione(Long idSerieTv, Integer numeroStagione): List<Puntata>
          + puntateBySerie(Long idSerieTv): List<Puntata>
          + findFilmById(Long id): Film
          + findSerieTvById(Long id): SerieTv
          + findPuntataById(PuntataID puntataID): List<Puntata>
          + searchFilmByGenere(Collection<Genere> generi): List<Film>
          + searchSerieTVByGenere(Collection<Genere> generi): List<SerieTv>
          + searchFilmByTitle(String titolo): List<Film>
          + findAllPuntate(): List<Puntata>
          + findPuntataByTitle(String titolo): List<Puntata>
          + searchSerieTvByTitle(String titolo): List<SerieTv>
          + findMostVoted(): List<Media>
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace control {
      class com.unisa.cinehub.control.GestioneCatalogoControl {
          + addFilm(Film film): Film
          + addSerieTV(SerieTV serieTv): SerieTv
          + addPuntata(Puntata puntata, Long idSerieTv, Integer numeroStagione): void
          + addCast(Cast cast): void
          + addRuolo(Ruolo ruolo, Long castId, Long mediaId): void
          + findAllCast(): List<Cast>
          + updateFilm(Film film): void
          + updateSerieTv(SerieTv serieTv): void
          + updatePuntata(Puntata puntata): void
          + removeFilm(Long id): void
          + removeSerieTV(Long id): void
          + removePuntata(PuntataID id): void
          + removeCast(Long id): void
          + addGeneriFilm(Collection<Genere> generi, Long id): void
          + addGeneriSerieTv(Collection<Genere> generi, Long id): void
          + findRecensioniByMiPiace(Recensibile recensibile): List<Recensione>
          + requestAllRecensioni(): List<Recensione>
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace control {
      class com.unisa.cinehub.control.ModerazioneControl {
          + addSegnalazione(Recensione recensione): void
          + bannaRecensore(String email): void
          + findAllSegnalazioni(): List<Segnalazione>
          + deleteRecensione(Recensione recensione): void
          + isSegnalted(Recensione recensione): Boolean

      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace control {
      class com.unisa.cinehub.control.UtenteControl {
          - cal : Calendar
          - eventPublisher : ApplicationEventPublisher
          + getAllRecensori(): List<Recensore>
          + getAllNotBannedRecensori(): List<Recensore>
          + registrazioneUtente(Utente utente): Utente
          + confermaRegistrazione(String token): void

      }
    }
  }

  com.unisa.cinehub.control.CatalogoControl -- com.unisa.cinehub.model.media.film.FilmService
  com.unisa.cinehub.control.CatalogoControl -- com.unisa.cinehub.model.utente.MiPiaceService
  com.unisa.cinehub.control.CatalogoControl -- com.unisa.cinehub.model.media.serietv.PuntataService
  com.unisa.cinehub.control.CatalogoControl -- com.unisa.cinehub.model.recensione.RecensioneService
  com.unisa.cinehub.control.CatalogoControl -- com.unisa.cinehub.model.media.serietv.SerieTVService
  com.unisa.cinehub.control.CatalogoControl -- com.unisa.cinehub.model.utente.UtenteService
  com.unisa.cinehub.control.GestioneCatalogoControl -- com.unisa.cinehub.model.media.CastService
  com.unisa.cinehub.control.GestioneCatalogoControl -- com.unisa.cinehub.model.media.film.FilmService
  com.unisa.cinehub.control.GestioneCatalogoControl -- com.unisa.cinehub.model.media.serietv.PuntataService
  com.unisa.cinehub.control.GestioneCatalogoControl -- com.unisa.cinehub.model.recensione.RecensioneService
  com.unisa.cinehub.control.GestioneCatalogoControl -- com.unisa.cinehub.model.media.RuoloService
  com.unisa.cinehub.control.GestioneCatalogoControl -- com.unisa.cinehub.model.media.serietv.SerieTVService
  com.unisa.cinehub.control.ModerazioneControl -- com.unisa.cinehub.model.recensione.RecensioneService
  com.unisa.cinehub.control.ModerazioneControl -- com.unisa.cinehub.model.utente.SegnalazioneService
  com.unisa.cinehub.control.ModerazioneControl -- com.unisa.cinehub.model.utente.UtenteService
  com.unisa.cinehub.control.UtenteControl -- com.unisa.cinehub.model.utente.RecensoreService
  com.unisa.cinehub.control.UtenteControl -- com.unisa.cinehub.model.utente.UtenteService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
